// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTableRow matches expand snapshot 1`] = `
<tr
  className="selected"
  key="187-3206"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <React.Fragment>
    <ToolTip
      className=""
      displayIcon={false}
      displayText={
        <td
          className="item-checkbox item-add-remove"
          onClick={[Function]}
          onKeyUp={[Function]}
          tabIndex={0}
        >
          <button
            className="btn btn  btn-item-add-remove-grid btn-sm btn-blue-border"
            type="button"
          >
            <i
              className="fa fa-2x fa-plus-circle"
            />
          </button>
        </td>
      }
      helpText={
        <label>
          Add item to print queue
        </label>
      }
    />
  </React.Fragment>
  <td
    className="item"
    key="item-187-3206"
    role="gridcell"
  >
    <span
      key="item"
    >
      <a
        role="link"
        tabIndex={0}
      >
        3206
      </a>
    </span>
  </td>
  <td
    className="subject"
    key="subject-187-3206"
    role="gridcell"
  >
    <span
      key="subject"
    >
      <span
        className="table-subject-highlight math"
      >
        Math
      </span>
    </span>
  </td>
  <td
    className="grade"
    key="grade-187-3206"
    role="gridcell"
  >
    <span
      key="grade"
    >
      <span>
        Grade 6
      </span>
    </span>
  </td>
  <td
    className="claim"
    key="claim-187-3206"
    role="gridcell"
  >
    <span
      key="claim"
    >
      <span>
        Concepts and Procedures and Logical
      </span>
    </span>
  </td>
  <td
    className="Target"
    key="Target-187-3206"
    role="gridcell"
  >
    <span
      key="target"
    >
      <ToolTip
        className="box"
        displayIcon={true}
        displayText="A"
        helpText={
          <p>
            Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
          </p>
        }
        position="bottom"
      />
    </span>
  </td>
  <td
    className="standard"
    key="standard-187-3206"
    role="gridcell"
  >
    <span
      key="standard"
    >
      <span>
        6.M.1a
      </span>
    </span>
    <span
      key="standard"
    >
      <ToolTip
        className="box"
        displayIcon={true}
        displayText=""
        helpText={
          <p>
            Content Standard information is currently unavailable for this item.
          </p>
        }
        position="bottom"
      />
    </span>
  </td>
  <td
    className="item-type"
    key="item-type-187-3206"
    role="gridcell"
  >
    <span
      key="item-type"
    >
      <span>
        Equation Multiple Choice choice
      </span>
    </span>
  </td>
</tr>
`;

exports[`ItemTableRow matches snapshot 1`] = `
<table>
  <tbody>
    <ItemTableRow
      columns={
        Array [
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "item",
              },
            ],
            "compare": [Function],
            "header": "Item",
            "headerClassName": "item",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "subject",
              },
            ],
            "compare": [Function],
            "header": "Subject",
            "headerClassName": "subject",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "grade",
              },
            ],
            "compare": [Function],
            "header": "Grade",
            "headerClassName": "grade",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "claim",
              },
            ],
            "compare": [Function],
            "header": "Claim",
            "headerClassName": "claim",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "target",
                "helpText": [Function],
              },
            ],
            "compare": [Function],
            "header": "Target",
            "headerClassName": "Target",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "standard",
              },
              Object {
                "accessor": [Function],
                "className": "standard",
                "helpText": [Function],
              },
            ],
            "compare": [Function],
            "header": "Standard",
            "headerClassName": "standard",
          },
          Object {
            "cols": Array [
              Object {
                "accessor": [Function],
                "className": "item-type",
              },
            ],
            "compare": [Function],
            "header": "Item Type",
            "headerClassName": "item-type",
          },
        ]
      }
      hasControls={true}
      isExpanded={false}
      onRowExpand={[MockFunction]}
      onRowSelect={[MockFunction]}
      rowData={
        Object {
          "bankKey": 187,
          "brailleOnlyItem": false,
          "calculator": true,
          "claimCode": "MATH1",
          "claimLabel": "Concepts and Procedures and Logical",
          "commonCoreStandardId": "6.M.1a",
          "grade": 8,
          "gradeLabel": "Grade 6",
          "interactionTypeCode": "EQ",
          "interactionTypeLabel": "Equation Multiple Choice choice",
          "isPerformanceItem": true,
          "itemKey": 3206,
          "subjectCode": "MATH",
          "subjectLabel": "Math",
          "targetDescription": "Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia",
          "targetHash": 100,
          "targetId": "A",
          "targetShortName": "",
          "title": "Math Grade 6 Claim 1",
        }
      }
    >
      <tr
        className=""
        key="187-3206"
        onClick={[Function]}
        onKeyUp={[Function]}
      >
        <ToolTip
          className=""
          displayIcon={false}
          displayText={
            <td
              className="item-checkbox item-add-remove"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              <button
                className="btn btn  btn-item-add-remove-grid btn-sm btn-blue-border"
                type="button"
              >
                <i
                  className="fa fa-2x fa-plus-circle"
                />
              </button>
            </td>
          }
          helpText={
            <label>
              Add item to print queue
            </label>
          }
        >
          <span
            className="tool-tip-links "
            tabIndex={0}
          >
            <span
              className="tool-tip-hoverable"
            >
              <td
                className="item-checkbox item-add-remove"
                onClick={[Function]}
                onKeyUp={[Function]}
                tabIndex={0}
              >
                <button
                  className="btn btn  btn-item-add-remove-grid btn-sm btn-blue-border"
                  type="button"
                >
                  <i
                    className="fa fa-2x fa-plus-circle"
                  />
                </button>
              </td>
               
            </span>
            <span
              className="tool-tip-details"
            >
              <span
                className="tool-tip-message  "
              >
                <label>
                  Add item to print queue
                </label>
              </span>
            </span>
          </span>
        </ToolTip>
        <td
          className="item"
          key="item-187-3206"
          role="gridcell"
        >
          <span
            key="item"
          >
            <a
              role="link"
              tabIndex={0}
            >
              3206
            </a>
          </span>
        </td>
        <td
          className="subject"
          key="subject-187-3206"
          role="gridcell"
        >
          <span
            key="subject"
          >
            <span
              className="table-subject-highlight math"
            >
              Math
            </span>
          </span>
        </td>
        <td
          className="grade"
          key="grade-187-3206"
          role="gridcell"
        >
          <span
            key="grade"
          >
            <span>
              Grade 6
            </span>
          </span>
        </td>
        <td
          className="claim"
          key="claim-187-3206"
          role="gridcell"
        >
          <span
            key="claim"
          >
            <span>
              Concepts and Procedures and Logical
            </span>
          </span>
        </td>
        <td
          className="Target"
          key="Target-187-3206"
          role="gridcell"
        >
          <span
            key="target"
          >
            <ToolTip
              className="box"
              displayIcon={true}
              displayText="A"
              helpText={
                <p>
                  Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
                </p>
              }
              position="bottom"
            >
              <span
                className="tool-tip-links box"
                tabIndex={0}
              >
                <span
                  className="tool-tip-hoverable"
                >
                  A
                   
                  <span
                    aria-hidden="true"
                    className="fa fa-info-circle fa-sm"
                  />
                </span>
                <span
                  className="tool-tip-details"
                >
                  <span
                    className="tool-tip-message bottom "
                  >
                    <p>
                      Target A description with extra text for testing fewoiauighruiaebiurbbvnianiuergruia
                    </p>
                  </span>
                </span>
              </span>
            </ToolTip>
          </span>
        </td>
        <td
          className="standard"
          key="standard-187-3206"
          role="gridcell"
        >
          <span
            key="standard"
          >
            <span>
              6.M.1a
            </span>
          </span>
          <span
            key="standard"
          >
            <ToolTip
              className="box"
              displayIcon={true}
              displayText=""
              helpText={
                <p>
                  Content Standard information is currently unavailable for this item.
                </p>
              }
              position="bottom"
            >
              <span
                className="tool-tip-links box"
                tabIndex={0}
              >
                <span
                  className="tool-tip-hoverable"
                >
                   
                  <span
                    aria-hidden="true"
                    className="fa fa-info-circle fa-sm"
                  />
                </span>
                <span
                  className="tool-tip-details"
                >
                  <span
                    className="tool-tip-message bottom "
                  >
                    <p>
                      Content Standard information is currently unavailable for this item.
                    </p>
                  </span>
                </span>
              </span>
            </ToolTip>
          </span>
        </td>
        <td
          className="item-type"
          key="item-type-187-3206"
          role="gridcell"
        >
          <span
            key="item-type"
          >
            <span>
              Equation Multiple Choice choice
            </span>
          </span>
        </td>
      </tr>
    </ItemTableRow>
  </tbody>
</table>
`;
